<?xml version="1.0"?>
<package format="3">
  <name>onrobot_rg2ft_action_server</name>
  <version>0.1.0</version>
  <description>ROS 2 action server bridging control_msgs/GripperCommand to OnRobot RG2-FT topics</description>

  <maintainer email="laraauboi5@todo.todo">laraauboi5</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>control_msgs</depend>
  <depend>onrobot_rg2ft_msgs</depend>
  <depend>sensor_msgs</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>
    <exec_depend>rosidl_default_runtime</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
