<?xml version="1.0"?>
<package format="3">
  <name>onrobot_rg2ft_control</name>
  <version>1.0.0</version>
  <description>ROS 2 package to control an OnRobot RG2-FT gripper</description>
  <maintainer email="itchuang@ucdavis.edu">Ian Chuang</maintainer>
  <author email="itchuang@ucdavis.edu">Ian Chuang</author>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>onrobot_rg2ft_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>