<?xml version="1.0"?>
<package format="3">
  <name>onrobot_rg2ft_description</name>
  <version>0.0.0</version>
  <description>The onrobot_rg2ft_description package</description>

  <maintainer email="ian@todo.todo">ian</maintainer>


  <license>TODO</license>


  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <build_type>ament_cmake</build_type>
  </export>
</package>
