<?xml version="1.0"?>
<package format="3">
    <name>onrobot_rg2ft_msgs</name>
    <version>0.1.0</version>
    <description>ROS 2 messages and services for the OnRobot RG2-FT gripper</description>

    <maintainer email="renjie.ding@dh-robotics.com">DH-Robotics Inc.</maintainer>
    <license>BSD</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <build_depend>rosidl_default_generators</build_depend>
    <exec_depend>rosidl_default_runtime</exec_depend>
    <member_of_group>rosidl_interface_packages</member_of_group>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
